Changelog
=========


2.0.2 (unreleased)
------------------

- Reimplement the document view template(depends on the dexterity standard template)
  Issue #1383 Dokument: Eigenschaften anzeigen View anpassen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1383/
  [phgross]

- Set permissions for Administrator role
  [lgraf]

- Added 'Force Checkin' permission
  [lgraf]

- Temporarily hide the task-tab in the document-tabbedview.
  #1293 Aufgaben Tab eines Dokuments voruebergehend ausblenden.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1293/
  [phgross]

- #1326 Checkout_documents wirft ein Fehler beim Versuch ein Mail auszuchecken.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1326
  Improved error handling in checkout_documents: Provide the user with a status
  message if one of the selected objects is not a document
  [eschmutz]


2.0.1 (2011-11-29)
------------------

- Added testcase for checking there's an initial version after a document got copied.
  [lgraf]

- Removed `extedit` action from opengever.document.document object actions
  [lgraf]


2.0 (2011-11-17)
----------------

- Implement default value generator(actual date) for the document_date field.
  Issue #1255 Vorschlag Tagesdatum bei Dokumenten
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1255/
  [phgross]

- Add the actual date as default_value for the document_date field.
  Issue #1255 Vorschlag Tagesdatum bei Dokumenten
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1255
  [phgross]

- Temporary disabled navigation tree query for content tree widget
  in relatedItems field because it has a severe performance impact.
  [lgraf]


2.0b18 (2011-10-04)
-------------------

- Added fallback and correct error handling, for given objects wich aren't documents,
  to the checkin_documents view.