@@ -68,11 +68,7 @@
   <permission-map name="Delete objects" acquired="True">
   </permission-map>
   <permission-map name="List folder contents" acquired="False">
-   <permission-role>Editor</permission-role>
    <permission-role>Manager</permission-role>
-   <permission-role>Owner</permission-role>
-   <permission-role>Reader</permission-role>
-   <permission-role>Administrator</permission-role>
   </permission-map>
   <permission-map name="Modify portal content" acquired="True">
   </permission-map>
