@@ -39,7 +39,7 @@
   </permission-map>
   <permission-map name="List folder contents"
                   acquired="False">
-   <permission-role>Anonymous</permission-role>
+   <permission-role>Manager</permission-role>
   </permission-map>
   <permission-map name="Modify portal content"
                   acquired="False">
@@ -97,11 +97,7 @@
   </permission-map>
   <permission-map name="List folder contents"
                   acquired="False">
-   <permission-role>Contributor</permission-role>
-   <permission-role>Editor</permission-role>
    <permission-role>Manager</permission-role>
-   <permission-role>Owner</permission-role>
-   <permission-role>Reader</permission-role>
   </permission-map>
   <permission-map name="Modify portal content"
                   acquired="False">
@@ -188,10 +184,7 @@
   </permission-map>
   <permission-map name="List folder contents"
                   acquired="False">
-   <permission-role>Editor</permission-role>
    <permission-role>Manager</permission-role>
-   <permission-role>Owner</permission-role>
-   <permission-role>Reader</permission-role>
   </permission-map>
   <permission-map name="Modify portal content"
                   acquired="False">
@@ -247,11 +240,6 @@
   <permission-map name="List folder contents"
                   acquired="False">
    <permission-role>Manager</permission-role>
-   <permission-role>Owner</permission-role>
-   <permission-role>Editor</permission-role>
-   <permission-role>Reader</permission-role>
-   <permission-role>Contributor</permission-role>
-   <permission-role>Reviewer</permission-role>
   </permission-map>
   <permission-map name="Modify portal content"
                   acquired="False">
@@ -302,7 +290,7 @@
   </permission-map>
   <permission-map name="List folder contents"
                   acquired="False">
-   <permission-role>Editor</permission-role>
+   <permission-role>Manager</permission-role>
   </permission-map>
   <permission-map name="Modify portal content"
                   acquired="False">
